--- a/Vidly/Views/Home/Contact.cshtml
+++ b/Vidly/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    204 A Building Bramha Exuberance<br />
+    OFF NIBM Road, Kondhwa<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +91 9975054434
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:sumukhballal@gmail.com">sumukhballal@gmail.com</a><br />
 </address>
